--- a/src/style.css
+++ b/src/style.css
@@ -26,44 +26,55 @@ body {font-size: 16px}
   align-items: flex-start;
   box-sizing: border-box;
   box-shadow: 2px 2px 10px #999;
-  transition: .4s background ease;
+  transition: .6s background-color, .6s color;
   overflow: hidden;
+}
 
-  &__number {
-    height: 4rem;
-    width: calc(100% - 4rem);
-    margin-left: 2rem;
-    box-sizing: border-box;
-    font-size: 1.2em;
-    padding: .5rem 1.5rem;
-    font-family: 'Halter';
-    outline: none;
-    background: rgba(255, 255,255, .3);
-    border: none;
-    border-radius: 5px;
-   }
+.number {
+  height: 4rem;
+  width: calc(100% - 4rem);
+  margin-left: 2rem;
+  box-sizing: border-box;
+  font-size: 1.2em;
+  padding: .5rem 1.5rem;
+  font-family: 'Halter';
+  outline: none;
+  background: rgba(255, 255,255, .2);
+  border: none;
+  border-radius: 5px;
+  color: inherit;
+}
 
-  &__type {
-    align-self: flex-end;
+.bank-name {
+  text-align: left;
+  padding-top: 1rem
+}
+.type {
+  align-self: flex-end;
+  text-align: right;
+}
+
+.type,
+.bank-name {
+  height: 8rem;
+  line-height: 8rem;
+  opacity: 0;
+  margin: 0;
+  transition: .4s opacity ease;
+  text-transform: uppercase;
+  padding: 0 4rem;
+  width: 100%;
+  box-sizing: border-box;
+  color: inherit;
+
+  &.visible {
+    opacity: 1;
   }
+}
 
-  &__type,
-  &__bank-name {
-    height: 5rem;
-    line-height: 3.5rem;
-    opacity: 0;
-    margin: 0;
-    transition: .4s opacity ease;
-    text-transform: uppercase;
-    background: rgba(255,255,255, .4);
-    padding: 1rem;
-    width: 100%;
-    text-align: center;
-    box-sizing: border-box;
-
-    &_visible {
-      opacity: 1;
-    }
+@banks-db-template {
+  .card.is-%country%-%name% {
+    background-color: %color%;
+    color: contrast(%color%);
   }
-
 }
