--- a/assets/style.css
+++ b/assets/style.css
@@ -180,7 +180,7 @@ body {font-size: 16px}
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   min-height: 100vh;
 }
 
@@ -205,7 +205,7 @@ body {font-size: 16px}
   width: calc(100% - 4rem);
   margin-left: 2rem;
   box-sizing: border-box;
-  font-size: 1.2em;
+  font-size: 1.1em;
   padding: .5rem 1.5rem;
   font-family: 'Halter';
   outline: none;
@@ -213,15 +213,6 @@ body {font-size: 16px}
   border: none;
   border-radius: 5px;
   color: inherit;
-}
-
-.bank-name {
-  text-align: left;
-  padding-top: 1rem
-}
-.type {
-  align-self: flex-end;
-  text-align: right;
 }
 
 .type,
@@ -240,6 +231,15 @@ body {font-size: 16px}
 
 .type.visible, .bank-name.visible {
   opacity: 1;
+}
+
+.bank-name {
+  text-align: left;
+  padding-top: 1rem
+}
+.type {
+  align-self: flex-end;
+  text-align: right;
 }
 
 .card.is-ru-alfabank {
