--- a/src/styles.pcss
+++ b/src/styles.pcss
@@ -88,7 +88,7 @@ html {
 }
 
 .description {
-  margin: 0;
+  margin: 0.5rem 0 0 0;
   padding: 0;
   font-size: 1.2rem;
 }
@@ -109,8 +109,8 @@ html {
 }
 
 .repo-link {
-  margin-bottom: 0.7rem;
   display: inline-block;
+  padding: 0.1rem;
 
   &:focus {
     outline: 2px solid #11b0c1;
